--- a/CSDAIv2/requirements.txt
+++ b/CSDAIv2/requirements.txt
@@ -2,11 +2,11 @@ Flask==2.3.3
 Werkzeug==2.3.7
 openai==1.3.5
 httpx>=0.27.0
-scikit-learn==1.3.2
-joblib==1.3.2
+scikit-learn>=1.4.0
+joblib>=1.2.0
 chromadb==0.4.18
 sentence-transformers==2.2.2
 python-dotenv==1.0.0
 requests==2.31.0
-numpy==1.24.3
-pandas==2.0.3
+numpy>=1.22.0
+pandas>=2.0.0
