--- a/CSDAIv2/requirements.txt
+++ b/CSDAIv2/requirements.txt
@@ -1,12 +1,82 @@
-Flask==2.3.3
-Werkzeug==2.3.7
-openai==1.3.5
-httpx>=0.27.0
-scikit-learn>=1.4.0
-joblib>=1.2.0
-chromadb==0.4.18
-sentence-transformers==2.2.2
-python-dotenv==1.0.0
-requests==2.31.0
-numpy>=1.22.0
-pandas>=2.0.0
+# Intellicket AI Support Platform - Python Dependencies
+# Version: 1.0.0
+# Updated: September 30, 2025
+
+# ============================================================================
+# CORE WEB FRAMEWORK
+# ============================================================================
+Flask==2.3.3                    # Core web framework for CSDAIv2 backend
+Werkzeug==2.3.7                # WSGI utilities for Flask
+Flask-CORS==4.0.0              # Cross-Origin Resource Sharing support
+gunicorn==21.2.0               # Production WSGI server
+
+# ============================================================================
+# AI/ML DEPENDENCIES 
+# ============================================================================
+openai==1.3.5                  # Claude API integration for Dynamic RAG
+httpx>=0.27.0                  # HTTP client for API requests
+scikit-learn>=1.4.0            # Machine learning algorithms
+joblib>=1.2.0                  # ML model serialization
+numpy>=1.22.0                  # Numerical computing
+pandas>=2.0.0                  # Data manipulation and analysis
+
+# ============================================================================
+# DYNAMIC RAG SYSTEM DEPENDENCIES
+# ============================================================================
+chromadb==0.4.18               # Vector database for RAG knowledge base
+sentence-transformers==2.2.2   # Text embeddings for RAG similarity
+torch>=2.0.0                   # PyTorch for transformer models
+transformers>=4.30.0           # Hugging Face transformers
+faiss-cpu>=1.7.4              # Facebook AI Similarity Search (CPU version)
+
+# ============================================================================
+# DATA PROCESSING & ANALYSIS
+# ============================================================================
+requests==2.31.0              # HTTP requests library
+python-dotenv==1.0.0          # Environment variable management
+lxml>=4.9.0                   # XML processing library
+beautifulsoup4>=4.12.0        # HTML/XML parsing
+xmltodict>=0.13.0             # XML to dictionary conversion
+PyPDF2>=3.0.0                 # PDF processing for knowledge base
+
+# ============================================================================
+# SYSTEM MONITORING & UTILITIES
+# ============================================================================
+psutil>=5.9.0                 # System and process utilities
+python-dateutil>=2.8.0        # Date/time parsing utilities
+pytz>=2023.3                  # Timezone handling
+colorama>=0.4.6               # Colored terminal output
+
+# ============================================================================
+# DATABASE & STORAGE
+# ============================================================================
+sqlite3                       # Built-in SQLite support (included in Python)
+
+# ============================================================================
+# SECURITY & VALIDATION
+# ============================================================================
+cryptography>=41.0.0          # Cryptographic operations
+PyJWT>=2.8.0                  # JSON Web Token handling
+bcrypt>=4.0.0                 # Password hashing
+
+# ============================================================================
+# DEVELOPMENT & TESTING (Optional)
+# ============================================================================
+pytest>=7.4.0                 # Testing framework
+pytest-flask>=1.2.0           # Flask testing utilities
+black>=23.0.0                 # Code formatting
+flake8>=6.0.0                 # Code linting
+
+# ============================================================================
+# PERFORMANCE & OPTIMIZATION
+# ============================================================================
+redis>=4.6.0                  # Redis client for caching (optional)
+celery>=5.3.0                 # Async task queue (optional)
+
+# ============================================================================
+# COMPATIBILITY NOTES
+# ============================================================================
+# Python Version: 3.8+ required (3.9+ recommended)
+# Platform: Windows, macOS, Linux
+# Memory: Minimum 4GB RAM (8GB+ recommended for ML operations)
+# Storage: 2GB+ free space for models and knowledge base
